# rust-vs-python-ml-bench

./: .gitignore  CLAUDE.md  CLAUDE_TODOS.md  Cargo.toml  DEEP_LEARNING_BENCHMARK_GUIDE.md  README.md  REVIEW.md  SPECS.md  SPEC_GAPS.md  TODO.md  USERGUIDE.md  analyze_benchmark_results.py  analyze_results_simple.py  benchmark_results_complete.csv  boston_housing_linear_python_boston_test_training_results.json  breast_cancer_kmeans_python_bc_test_training_results.json  breast_cancer_svc_python_bc_svm_test_training_results.json  california_housing_linear_python_cali_test_training_results.json  cifar10_resnet18_python_cifar10_resnet18_cpu_complete_training_results.json  cifar10_resnet18_python_cifar10_resnet18_gpu_complete_training_results.json  cifar10_resnet18_python_cifar10_resnet18_gpu_fixed_training_results.json  cifar10_resnet18_rust_resnet18_cifar10_training_results.json  fix_accuracy_display.py  iris_kmeans_python_test_training_results.json  iris_kmeans_test_python_clustering_training_results.json  iris_svc_python_test_training_results.json  iris_svc_test_python_svm_training_results.json  main.nf  mnist_lenet_python_mnist_lenet_gpu_complete_training_results.json  mnist_lenet_python_mnist_lenet_gpu_fixed_training_results.json  mnist_lenet_rust_mnist_lenet_gpu_fixed_training_results.json  mnist_simple_cnn_python_mnist_simple_cnn_gpu_complete_training_results.json  mnist_simple_cnn_python_mnist_simple_cnn_gpu_fixed_training_results.json  mnist_simple_cnn_rust_mnist_simple_cnn_gpu_complete_training_results.json  mnist_simple_cnn_rust_mnist_simple_cnn_gpu_fixed_training_results.json  nextflow.config  quick_benchmark.sh  requirements.txt  run_complete_benchmark.sh  (+29 more)
(+118 files in other folders)
