[package]
name = "regression_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
linfa = "0.7"
linfa-linear = "0.7.0"
ndarray = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
sysinfo = "0.29"
 